<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <!-- General -->
    <string name="Back">Back</string>
    <string name="Log_Out">Log Out</string>
    <string name="Settings">Settings</string>

    <!-- Main Page -->
    <string name="Title">Study Buddy</string>
    <string name="Upload_Assignment">Scan &amp; Upload Assignment</string>
    <string name="Saved_Assignments">Saved Assignments</string>
    <string name="Grades">Grades</string>
    <string name="Forum">Forum</string>
    <string name="Chat">Chat</string>
    <string name="Schedule">Schedule</string>

    <!-- Forum -->
    <string name="New_Thread">New Thread</string>
    <string name="Post">Post</string>
    <string name="Create_Thread">Create Thread</string>
    <string name="Thread_Name">Thread Name</string>
    <string name="First_Message">First Message</string>
    <string name="StudyBuddyForum">Study Buddy Forum</string>

    <!-- Chat -->
    <string name="Send">Send</string>

    <!-- Schedule -->
    <string name="Add_Event">Add Event</string>
    <string name="Month_Back">&lt;=</string>
    <string name="Month_Forward">=&gt;</string>

    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>

    <string name="Done">Mark As Done</string>
    <string name="Edit">Edit / View Details</string>

    <string name="Name">Name</string>
    <string name="DescriptionShort">Desc</string>
    <string name="DueDate">Due Date</string>
    <string name="TimeEstimate">Hours of Work</string>

    <string name="ScheduleNewInstructions">Enter a guess for the number of hours that you think it will take you to complete the assignment.</string>


    <string name="NewActivity">New Activity</string>
    <string name="StartDate">Start Date</string>
    <string name="Repeat">Repeat</string>
    <string name="Never">Never</string>
    <string name="Daily">Daily</string>
    <string name="Weekly">Weekly</string>
    <string name="BiWeekly">Bi-Weekly</string>
    <string name="Monthly">Monthly</string>
    <string name="Yearly">Yearly</string>
    <string name="Time">Time</string>
    <string name="End">End</string>
    <string name="Duration">Duration</string>
    <string name="Activity">Activity</string>
    <string name="Assignment">Assignment</string>
    <string name="Type">Type</string>





    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>