<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".schedule.CalendarAddEventFragment">

    <TextView
        android:id="@+id/ScheduleNewTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Type"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleTypeRadioGroup"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleTypeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleTypeRadioGroup" />

    <TextView
        android:id="@+id/NewActivityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/NewActivity"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/ScheduleTypeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewActivityLabel">

        <RadioButton
            android:id="@+id/ScheduleNewActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Activity" />

        <RadioButton
            android:id="@+id/ScheduleNewAssignment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Assignment" />
    </RadioGroup>

    <TextView
        android:id="@+id/ScheduleNewNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleNewNameInput"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleNewNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewNameInput" />

    <EditText
        android:id="@+id/ScheduleNewNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleTypeRadioGroup" />

    <TextView
        android:id="@+id/scheduleNewDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/DescriptionShort"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleNewDescriptionInput"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleNewNameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewDescriptionInput" />

    <EditText
        android:id="@+id/ScheduleNewDescriptionInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleNewNameInput" />

    <TextView
        android:id="@+id/ScheduleNewTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Time"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleNewTimeInput"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleNewTimeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewTimeInput" />

    <EditText
        android:id="@+id/ScheduleNewTimeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleNewDescriptionInput" />

    <EditText
        android:id="@+id/ScheduleNewExpectedDurationInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewEndInput" />

    <TextView
        android:id="@+id/ScheduleNewEndLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/End"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleNewEndInput"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleNewTimeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewEndInput" />

    <TextView
        android:id="@+id/ScheduleNewExpectedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Duration"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleNewEndInput"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleNewTimeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewEndInput" />

    <TextView
        android:id="@+id/ScheduleNewInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ScheduleNewInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleNewEndInput" />

    <EditText
        android:id="@+id/ScheduleNewEndInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleNewTimeInput" />

    <TextView
        android:id="@+id/ScheduleNewDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Duration"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleNewDurationInput"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleNewTimeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewDurationInput" />

    <EditText
        android:id="@+id/ScheduleNewDurationInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleNewEndInput" />

    <RadioGroup
        android:id="@+id/ScheduleNewRepeatRadio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/ScheduleNewDescriptionInput"
        app:layout_constraintStart_toStartOf="@+id/ScheduleNewDescriptionInput"
        app:layout_constraintTop_toBottomOf="@+id/ScheduleNewDurationInput">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ScheduleNewDailyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Daily" />

            <RadioButton
                android:id="@+id/ScheduleNewMonthlyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Monthly" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ScheduleNewWeeklyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Weekly" />

            <RadioButton
                android:id="@+id/ScheduleNewYearlyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Yearly" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/ScheduleNewBiWeeklyRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BiWeekly" />

            <RadioButton
                android:id="@+id/ScheduleNewNeverRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Never" />

        </LinearLayout>

    </RadioGroup>

    <TextView
        android:id="@+id/ScheduleNewRepeatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Repeat"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ScheduleNewRepeatRadio"
        app:layout_constraintEnd_toStartOf="@+id/ScheduleNewRepeatRadio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ScheduleNewRepeatRadio" />

    <Button
        android:id="@+id/ScheduleNewSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Save"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/ScheduleNewCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ScheduleNewCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>